--- a/02_sustentabilidade_nos_ambientes/css/custom.css
+++ b/02_sustentabilidade_nos_ambientes/css/custom.css
@@ -41,7 +41,10 @@ header {
   height: 480px;
   width: 953px;
 }
-
+.painel-tripe button, .painel.selos button{transition: all .4s;}
+.painel-tripe button:hover, .painel.selos button:hover{
+  transform: scale(1.1);
+}
 button {
   border: none;
   background-color: transparent;
