--- a/03_industria/css/custom.css
+++ b/03_industria/css/custom.css
@@ -1,53 +1,7 @@
-.bloco-1 {
-  background: url(../imgs/BG.png);
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
-  margin-top: 37px;
-  background-attachment: fixed;
-}
-h1,
-h3,
-h2,
-h4 {
-  color: #66a1a1;
-  font-weight: bold;
-}
-.b1 {
-  background-color: #fff;
-  max-width: 1238px;
-  padding: 20px 0;
-  padding-bottom: 80px;
-  margin: auto;
-}
-
-.b1 .container {
-  max-width: 800px;
-}
-p {
-  font-size: 20px;
-  word-wrap: break-word;
-}
-
-h2 {
-  font-size: 38px;
-  margin-bottom: -30px;
-}
-
-h3 {
-  font-size: 24px;
-}
-
-h4 {
-  font-size: 20px;
-}
-
-@media (max-width:1100px) {
-  .bloco-1 {
-    background: unset;
-    background-size: unset;
-    background-repeat: unset;
-    margin-top: 37px;
-    background-attachment: unset;
-    background-color: #fff;
-  }
+body{
+  background: url('../imgs/img_2.png'), url('../imgs/img_1.png'), url('../imgs/background_branco.png');
+  background-position: right 20px top, left 20px top, center;
+  background-repeat: no-repeat, no-repeat, repeat;
+  background-attachment: auto, auto, fixed;
+  background-size: 12%, 8%, cover;
 }
