--- a/06_meio_ambiente/css/custom.css
+++ b/06_meio_ambiente/css/custom.css
@@ -1,23 +1,26 @@
 header {
-  margin-top: 100px;
+  margin-top: 80px;
+}
+.ambiente {
+  display: flex;
 }
 
-.citacao {
-  padding-left: 40%;
+.margem {
+  margin-top: 10px;
 }
 
-.citacao p {
-  text-align: justify;
+.imagem {
+  background: url("../imgs/img.png");
+  background-size: cover;
+  height: 1217px;
+  width: 800px;
 }
 
-@media (max-width: 480px) {
-  .citacao {
-    padding-left: 10%;
-  }
-}
-
-@media (max-width: 820px) {
-  .citacao {
-    padding-left: 30%;
+@media (max-width: 1800px) {
+  .imagem {
+    background: unset;
+    background-size: unset;
+    height: unset;
+    width: unset;
   }
 }
