--- a/08_urban_jungle/css/custom.css
+++ b/08_urban_jungle/css/custom.css
@@ -6,6 +6,8 @@
   font-family: sourcesans-bold;
   src: url("../fonts/SourceSansPro-Bold.ttf");
 }
+
+/*
 .container.fundo-tecnicos {
 background:  url("../imgs/background.png") no-repeat;
 background-attachment: fixed;
@@ -15,6 +17,49 @@ background: url("../imgs/background.png") no-repeat;
 background-attachment: fixed;
 z-index: 4;
 }
+*/
+
+.container.cont1{
+  padding-top: 40px;
+  position: relative;
+}
+.img-inicio_esq{
+  position: absolute;
+  left: 0%;
+  z-index: 0;
+}
+.img-inicio_dir{
+  position: absolute;
+  right: 0%;
+  z-index: 0;
+}
+
+.bloco_branco{
+  background: url("../imgs/background_branco.png") repeat;
+  z-index: 4;
+  width: 100%;
+}
+
+.bloco_verde{
+  background: url("../imgs/background_escuro.png") no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  z-index: 4;
+  width: 100%;
+}
+.bloco_verde h2, .bloco_verde h3, .bloco_verde p{
+  color: #fff;
+}
+
+.bloco_verde .caixa-destaque-livre p, .bloco_verde .modal-body p{
+  color: #333 !important;
+}
+
+.container img{
+  max-width: 650px;
+  width: 100%;
+}
+
 .imgbg1{
   margin-left: -400px;
   position: absolute;
@@ -39,24 +84,24 @@ html{scroll-behavior: smooth;}
 .fundo-tecnicos{padding-top: 30px;}
 .container header{margin-top: 100px;}
 h2 {
-  font-size: 30px;
+  font-size: 32px;
 }
 h3 {
-  font-size: 24px;
+  font-size: 26px;
   margin-top: 40px;
 }
 h4 {
-  font-size: 20px;
+  font-size: 22px;
 }
 h5 {
-  font-size: 18px;
+  font-size: 20px;
 }
 p,
 li,
 a,
 td {
   font-family: sourcesans-regular;
-  font-size: 16px;
+  font-size: 18px;
 }
 h2,
 h3,
@@ -97,14 +142,178 @@ width: 100% !important;
 }
 
 .final{
-  margin-top: 30px;
+  padding-top: 40px;
+  padding-bottom: 80px;
 }
 
+.caixa-destaque-livre{
+  margin: 30px auto 50px auto;
+}
+
+.modal-header h4{
+  margin: 0;
+  padding: 4px;
+}
 
 .nav-tabs a, .nav-tabs>li>a:hover{
   color: #e74c3c;
 }
 
+
+.img-plantas_1{
+  position: absolute;
+  right: 0;
+  width: 200px;
+  margin-top: -440px;
+}
+.img-plantas_2{
+  position: absolute;
+  left: 0;
+  width: 220px;
+  margin-top: -60px;
+}
+.img-plantas_3{
+  position: absolute;
+  right: 0;
+  width: 320px;
+  margin-top: -60px;
+}
+.img-plantas_4{
+  position: absolute;
+  left: 2%;
+  width: 120px;
+  margin-top: -400px;
+}
+.img-plantas_5{
+  position: absolute;
+  right: 2%;
+  margin-top: -120px;
+}
+.img-plantas_6{
+  position: absolute;
+  left: 2%;
+  width: 150px;
+  margin-top: -70px;
+}
+
+
+.painel-toxicas{
+  text-align: center;
+}
+.img-toxicas{
+  height: 240px;
+  width: auto !important;
+  margin: 15px;
+}
+.text-right{
+  text-align: right;
+  padding-right: 20px;
+}
+.img-legenda{
+  margin: 20px;
+  width: 100px !important;
+}
+
+.painel-planta_casa{
+  background: url('../imgs/painel_clicavel.png') no-repeat;
+  width: 800px;
+  height: 750px;
+  margin: 40px auto;
+}
+.painel-planta_casa button{
+  border: none;
+  width: 160px;
+  height: 60px;
+  transition: all 0.2s;
+  position: absolute;
+}
+.bt-sala{
+  background: url('../imgs/btn_1.png') no-repeat;
+  background-size: 100%;
+  margin-left: 530px;
+  margin-top: 470px;
+}
+.bt-dormitorio{
+  background: url('../imgs/btn_2.png') no-repeat;
+  background-size: 100%;
+  margin-left: 510px;
+  margin-top: 200px;
+}
+.bt-cozinha{
+  background: url('../imgs/btn_3.png') no-repeat;
+  background-size: 100%;
+  margin-left: 70px;
+  margin-top: 550px;
+}
+.bt-espaco_trabalho{
+  background: url('../imgs/btn_4.png') no-repeat;
+  background-size: 100%;
+  margin-left: 95px;
+  margin-top: 200px;
+}
+.bt-banheiro{
+  background: url('../imgs/btn_5.png') no-repeat;
+  background-size: 100%;
+  margin-left: 300px;
+  margin-top: 110px;
+}
+.bt-sala:hover{background-image: url('../imgs/btn_1_hover.png');}
+.bt-dormitorio:hover{background-image: url('../imgs/btn_2_hover.png');}
+.bt-cozinha:hover{background-image: url('../imgs/btn_3_hover.png');}
+.bt-espaco_trabalho:hover{background-image: url('../imgs/btn_4_hover.png');}
+.bt-banheiro:hover{background-image: url('../imgs/btn_5_hover.png');}
+
+.div-infografico{
+  padding: 20px;
+  padding-left: 35px;
+  border: #547F7F solid 4px;
+  width: 660px;
+  margin: 40px auto 60px auto;
+}
+.div-infografico img{
+  width: 83px;
+  position: absolute;
+  margin-left: 574px;
+  margin-top: -232px;
+}
+.div-infografico ul{
+  margin-bottom: 0px;
+}
+ul.marcador-folha li{
+  list-style-image: url('../imgs/infografico_bullet.png');
+}
+
+
+@media screen and (max-width: 1281px){
+  .img-inicio_esq, .img-inicio_dir{
+    width: 320px;
+    margin-top: 80px;
+  }
+  .img-plantas_2{
+    left: -3%;
+    width: 170px;
+  }
+  .img-plantas_3{
+    width: 270px;
+    margin-top: -40px;
+  }
+  .img-plantas_4{
+    left: 0%;
+    width: 90px;
+    margin-top: -300px;
+  }
+  .img-plantas_5{
+    width: 180px;
+    margin-top: -80px;
+    right: 1%;
+  }
+  .img-plantas_6{
+    position: absolute;
+    left: 0.5%;
+    width: 130px;
+    margin-top: -20px;
+  }
+}
 
 @media screen and (max-width: 1000px){
   .parallax {display: none;}
@@ -113,9 +322,42 @@ width: 100% !important;
 }
 
 @media screen and (max-width: 820px){
-
+  .painel-planta_casa{
+    transform: scale(0.88);
+    margin: -45px;
+  }
 }
 
 @media screen and (max-width: 480px){
+  .text-right{
+    padding-right: 0px;
+  }
+  .img-legenda{
+    margin: 20px auto;
+    display: block;
+  }
 
+  .painel-planta_casa{
+    background: none;
+    width: 100%;
+    height: unset;
+    margin: 0px auto;
+  }
+  .painel-planta_casa button{
+    border: none;
+    position: relative;
+    margin: 30px auto;
+    display: block;
+    width: 200px;
+    height: 76px;
+  }
+
+  .div-infografico{
+    padding: 20px;
+    width: 100%;
+  }
+  .div-infografico img{
+    margin: 0;
+    display: none;
+  }
 }
