--- a/10_jardins/css/custom.css
+++ b/10_jardins/css/custom.css
@@ -6,14 +6,12 @@
   font-family: sourcesans-bold;
   src: url("../fonts/SourceSansPro-Bold.ttf");
 }
-.container.fundo-tecnicos {
-background:  url("../imgs/background.png") no-repeat;
-background-attachment: fixed;
-}
+
 .pagina{
-background: url("../imgs/background.png") no-repeat;
-background-attachment: fixed;
-z-index: 4;
+  background: url("../imgs/background.png") no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  z-index: 4;
 }
 .imgbg1{
   margin-left: -400px;
@@ -97,11 +95,211 @@ width: 100% !important;
 }
 
 .final{
-  margin-top: 30px;
+  margin-top: 50px;
+  margin-bottom: 80px;
 }
 
 
+/*----------- SLIDESHOW -----------*/
+#carousel1{
+  width: 500px;
+  margin: 20px auto;
+}
+.carousel-inner .item{
+  padding: 28px;
+}
+.carousel-inner .item img{
+  width: 350px;
+}
+.carousel-control.left, .carousel-control.right{
+  background: none;
+  width: 53px;
+  height: 104px;
+  opacity: 1;
+  top:0;
+  bottom:0;
+  margin-top: auto;
+  margin-bottom: auto;
+  transition: all .4s;
+}
+.carousel-control.left{
+  background: url('../imgs/bt2_slide.png') no-repeat center;
+  left: 0px;
+}
+.carousel-control.left:hover{
+  background-image: url('../imgs/bt2_slide_hv.png');
+}
+.carousel-control.right:hover{
+  background-image: url('../imgs/bt1_slide_hv.png');
+}
+.carousel-control.right{
+  background: url('../imgs/bt1_slide.png') no-repeat center;
+  right: 0px;
+}
+.carousel-indicators{
+  margin-bottom: -25px;
+}
+.carousel-indicators li{
+  background-color: #64817e;
+  border: #212d2d solid 3px;
+  width: 14px;
+  height: 14px;
+}
+.carousel-indicators li.active{
+  width: 14px;
+  height: 14px;
+  margin: 1px;
+  background-color: #212d2d;
+}
+/*----------- /SLIDESHOW -----------*/
 
+
+.espera_video{
+  background-color: #64817e;
+  border: #212d2d solid 8px;
+  width: 640px;
+  height: 360px;
+  margin: 20px auto;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center
+}
+.espera_video h3{
+  color: #212d2d;
+  margin: 0;
+}
+
+.painel-estilos{
+  text-align: center;
+  margin-bottom: 60px;
+}
+.btn-estilos{
+  border: none;
+  width: 290px;
+  height: 138px;
+  margin: 12px;
+}
+.btn-estilo01{background: url('../imgs/bt_1_frances.png') no-repeat right bottom;}
+.btn-estilo02{background: url('../imgs/bt_2_italiano.png') no-repeat right bottom;}
+.btn-estilo03{background: url('../imgs/bt_3_ingles.png') no-repeat right bottom;}
+.btn-estilo04{background: url('../imgs/bt_4_tropical.png') no-repeat left bottom; margin-left: 30px;}
+.btn-estilo05{background: url('../imgs/bt_5_arido.png') no-repeat left bottom; margin-left: 30px;}
+.btn-estilo06{background: url('../imgs/bt_6_colonial.png') no-repeat right bottom;}
+.btn-estilo07{background: url('../imgs/bt_7_contemporaneo.png') no-repeat right bottom;}
+.btn-estilo08{background: url('../imgs/bt_8_sensorial.png') no-repeat right bottom;}
+
+.btn-estilo01:hover{background-image: url('../imgs/bt_1_frances_hv.png');}
+.btn-estilo02:hover{background-image: url('../imgs/bt_2_italiano_hv.png');}
+.btn-estilo03:hover{background-image: url('../imgs/bt_3_ingles_hv.png');}
+.btn-estilo04:hover{background-image: url('../imgs/bt_4_tropical_hv.png');}
+.btn-estilo05:hover{background-image: url('../imgs/bt_5_arido_hv.png');}
+.btn-estilo06:hover{background-image: url('../imgs/bt_6_colonial_hv.png');}
+.btn-estilo07:hover{background-image: url('../imgs/bt_7_contemporaneo_hv.png');}
+.btn-estilo08:hover{background-image: url('../imgs/bt_8_sensorial_hv.png');}
+
+.bloco_verde{
+  background-color: #64817e;
+  z-index: 4;
+  width: 100%;
+  padding: 100px 0px;
+  border-radius: 550px 0px 550px 0px;
+  margin: 50px 0px;
+}
+.bloco_verde h3{
+  margin-top: 0;
+}
+.bloco_verde h2, .bloco_verde h3, .bloco_verde p{
+  color: #fff;
+}
+.bloco_verde .caixa-destaque-livre p, .bloco_verde .modal-body p{
+  color: #333 !important;
+}
+
+.painel-tipos{
+  text-align: center;
+}
+.btn-tipos{
+  border: none;
+  margin: 15px;
+}
+.btn-vertical{
+  background: url('../imgs/bt_vertical.png') no-repeat center bottom;
+  width: 235px;
+  height: 535px;
+}
+.btn-vertical:hover{background-image: url('../imgs/bt_vertical_hv.png');}
+
+.btn-inverno{
+  background: url('../imgs/bt_inverno.png') no-repeat center bottom;
+  width: 200px;
+  height: 570px;
+}
+.btn-inverno:hover{background-image: url('../imgs/bt_inverno_hv.png');}
+
+.btn-terraco{
+  background: url('../imgs/bt_terraco.png') no-repeat center bottom;
+  width: 257px;
+  height: 381px;
+}
+.btn-terraco:hover{background-image: url('../imgs/bt_terracos_hv.png');}
+
+
+/*----------- IMAGENS DECORATIVAS -----------*/
+
+.img-planta{
+  position: absolute;
+  left: 0;
+  z-index: 0;
+  width: 200px;
+  margin-top: 80px;
+}
+.img-janela{
+  position: absolute;
+  right: 0;
+  z-index: 0;
+  width: 200px;
+  margin-top: -397px;
+}
+.img-folhagem_dir{
+  position: absolute;
+  right: 0;
+  z-index: 0;
+  width: 250px;
+}
+.img-folhagem_esq{
+  position: absolute;
+  left: 0;
+  z-index: 0;
+  width: 230px;
+}
+
+/*----------- /IMAGENS DECORATIVAS -----------*/
+
+
+@media screen and (max-width: 1281px){
+  .img-planta{
+    left: -2%;
+    width: 160px;
+  }
+  .img-janela{
+    width: 160px;
+    margin-top: -308px;
+  }
+  .img-folhagem_dir{
+    width: 200px;
+  }
+  .img-folhagem_esq{
+    width: 170px;
+    left: -4%;
+  }
+
+  .bloco_verde{
+    padding: 80px 40px;
+    border-radius: 350px 0px 350px 0px;
+    margin: 50px 0px;
+  }
+}
 
 @media screen and (max-width: 1000px){
   .parallax {display: none;}
@@ -110,9 +308,26 @@ width: 100% !important;
 }
 
 @media screen and (max-width: 820px){
+  .btn-estilo04, .btn-estilo05{
+    margin-left: 30px;
+    margin-right: -10px;
+  }
 
+  .bloco_verde{
+    padding: 80px 40px;
+    border-radius: 200px 0px 200px 0px;
+    margin: 50px 0px;
+  }
+  .btn-tipos{
+    border: none;
+    margin: 10px;
+  }
 }
 
 @media screen and (max-width: 480px){
-
+  .espera_video{
+    width: 320px;
+    height: 180px;
+    border-radius: 10px;
+  }
 }
