--- a/05_re-design_materiais/css/custom.css
+++ b/05_re-design_materiais/css/custom.css
@@ -30,7 +30,8 @@
 }
 .elemento_esq{
   position: absolute;
-  left: 6%;
+  left: 0;
+  width: 15%;
 }
 .elemento_dir{
   margin-left: 40px;
@@ -143,8 +144,9 @@ p{
 
 .img_2{
   position: absolute;
-  left: 0%;
+  left: 0;
   margin-top: 50px;
+  width: 16%;
 }
 
 .btn-redesign{
