--- a/10_jardins/css/custom.css
+++ b/10_jardins/css/custom.css
@@ -7,35 +7,43 @@
   src: url("../fonts/SourceSansPro-Bold.ttf");
 }
 
-.pagina{
+.pagina {
   background: url("../imgs/background.png") no-repeat;
   background-attachment: fixed;
   background-size: cover;
   z-index: 4;
 }
-.imgbg1{
+.imgbg1 {
   margin-left: -400px;
   position: absolute;
   margin-top: -100px;
 }
-.textofinal{
+.textofinal {
   padding: 50px;
   margin-top: -40px;
 }
-html{scroll-behavior: smooth;}
-.topo{
+html {
+  scroll-behavior: smooth;
+}
+.topo {
   margin-top: 30px;
 }
-.elemento1{margin-left: -33%;}
-.elemento2{
+.elemento1 {
+  margin-left: -33%;
+}
+.elemento2 {
   margin-top: 40px;
   margin-left: -15%;
 }
-.topo .titulo{
+.topo .titulo {
   margin-top: 20%;
 }
-.fundo-tecnicos{padding-top: 30px;}
-.container header{margin-top: 100px;}
+.fundo-tecnicos {
+  padding-top: 30px;
+}
+.container header {
+  margin-top: 100px;
+}
 h2 {
   font-size: 30px;
 }
@@ -63,92 +71,92 @@ h5 {
   font-family: sourcesans-bold;
   color: #a73a31;
 }
-.w-5{
+.w-5 {
   max-width: 50%;
 }
 .citacao p {
   font-size: 15px;
   margin: 0;
 }
-p{
+p {
   margin-top: 2%;
 }
-.nav-tabs{
+.nav-tabs {
   margin-left: 0;
 }
-.textotitulo{
+.textotitulo {
   margin-top: 65px;
 }
 
-.parallax{
+.parallax {
   min-height: 400px;
   background: transparent;
   width: 100% !important;
 }
-.parallax-mirror{
-z-index: unset !important;
-width: 100% !important;
-}
-.parallax-mirror{
+.parallax-mirror {
   z-index: unset !important;
   width: 100% !important;
 }
-.parallax-slider{
+.parallax-mirror {
+  z-index: unset !important;
+  width: 100% !important;
+}
+.parallax-slider {
   width: 100%;
 }
 
-.final{
+.final {
   margin-top: 50px;
   margin-bottom: 80px;
 }
 
-
 /*----------- SLIDESHOW -----------*/
-#carousel1{
+#carousel1 {
   width: 500px;
   margin: 20px auto;
 }
-.carousel-inner .item{
+.carousel-inner .item {
   padding: 28px;
 }
-.carousel-inner .item img{
+.carousel-inner .item img {
   width: 350px;
 }
-.carousel-control.left, .carousel-control.right{
+.carousel-control.left,
+.carousel-control.right {
   background: none;
   width: 53px;
   height: 104px;
   opacity: 1;
-  top:0;
-  bottom:0;
+  top: 0;
+  bottom: 0;
   margin-top: auto;
   margin-bottom: auto;
-  transition: all .4s;
+  transition: all 0.4s;
 }
-.carousel-control.left{
-  background: url('../imgs/bt2_slide.png') no-repeat center;
+.carousel-control.left {
+  background: url("../imgs/bt2_slide.png") no-repeat center;
   left: 0px;
 }
-.carousel-control.left:hover{
-  background-image: url('../imgs/bt2_slide_hv.png');
+.carousel-control.left:hover {
+  background-image: url("../imgs/bt2_slide_hv.png");
 }
-.carousel-control.right:hover{
-  background-image: url('../imgs/bt1_slide_hv.png');
+.carousel-control.right:hover {
+  background-image: url("../imgs/bt1_slide_hv.png");
 }
-.carousel-control.right{
-  background: url('../imgs/bt1_slide.png') no-repeat center;
+.carousel-control.right {
+  background: url("../imgs/bt1_slide.png") no-repeat center;
   right: 0px;
 }
-.carousel-indicators{
+.carousel-indicators {
   margin-bottom: -25px;
 }
-.carousel-indicators li{
+.carousel-indicators li {
   background-color: #64817e;
   border: #212d2d solid 3px;
   width: 14px;
   height: 14px;
 }
-.carousel-indicators li.active{
+.carousel-indicators li.active {
   width: 14px;
   height: 14px;
   margin: 1px;
@@ -156,8 +164,7 @@ width: 100% !important;
 }
 /*----------- /SLIDESHOW -----------*/
 
-
-.espera_video{
+.espera_video {
   background-color: #64817e;
   border: #212d2d solid 8px;
   width: 640px;
@@ -166,42 +173,76 @@ width: 100% !important;
   border-radius: 20px;
   display: flex;
   align-items: center;
-  justify-content: center
+  justify-content: center;
 }
-.espera_video h3{
+.espera_video h3 {
   color: #212d2d;
   margin: 0;
 }
 
-.painel-estilos{
+.painel-estilos {
   text-align: center;
   margin-bottom: 60px;
 }
-.btn-estilos{
+.btn-estilos {
   border: none;
   width: 290px;
   height: 138px;
   margin: 12px;
 }
-.btn-estilo01{background: url('../imgs/bt_1_frances.png') no-repeat right bottom;}
-.btn-estilo02{background: url('../imgs/bt_2_italiano.png') no-repeat right bottom;}
-.btn-estilo03{background: url('../imgs/bt_3_ingles.png') no-repeat right bottom;}
-.btn-estilo04{background: url('../imgs/bt_4_tropical.png') no-repeat left bottom; margin-left: 30px;}
-.btn-estilo05{background: url('../imgs/bt_5_arido.png') no-repeat left bottom; margin-left: 30px;}
-.btn-estilo06{background: url('../imgs/bt_6_colonial.png') no-repeat right bottom;}
-.btn-estilo07{background: url('../imgs/bt_7_contemporaneo.png') no-repeat right bottom;}
-.btn-estilo08{background: url('../imgs/bt_8_sensorial.png') no-repeat right bottom;}
+.btn-estilo01 {
+  background: url("../imgs/bt_1_frances.png") no-repeat right bottom;
+}
+.btn-estilo02 {
+  background: url("../imgs/bt_2_italiano.png") no-repeat right bottom;
+}
+.btn-estilo03 {
+  background: url("../imgs/bt_3_ingles.png") no-repeat right bottom;
+}
+.btn-estilo04 {
+  background: url("../imgs/bt_4_tropical.png") no-repeat left bottom;
+  margin-left: 30px;
+}
+.btn-estilo05 {
+  background: url("../imgs/bt_5_arido.png") no-repeat left bottom;
+  margin-left: 30px;
+}
+.btn-estilo06 {
+  background: url("../imgs/bt_6_colonial.png") no-repeat right bottom;
+}
+.btn-estilo07 {
+  background: url("../imgs/bt_7_contemporaneo.png") no-repeat right bottom;
+}
+.btn-estilo08 {
+  background: url("../imgs/bt_8_sensorial.png") no-repeat right bottom;
+}
 
-.btn-estilo01:hover{background-image: url('../imgs/bt_1_frances_hv.png');}
-.btn-estilo02:hover{background-image: url('../imgs/bt_2_italiano_hv.png');}
-.btn-estilo03:hover{background-image: url('../imgs/bt_3_ingles_hv.png');}
-.btn-estilo04:hover{background-image: url('../imgs/bt_4_tropical_hv.png');}
-.btn-estilo05:hover{background-image: url('../imgs/bt_5_arido_hv.png');}
-.btn-estilo06:hover{background-image: url('../imgs/bt_6_colonial_hv.png');}
-.btn-estilo07:hover{background-image: url('../imgs/bt_7_contemporaneo_hv.png');}
-.btn-estilo08:hover{background-image: url('../imgs/bt_8_sensorial_hv.png');}
+.btn-estilo01:hover {
+  background-image: url("../imgs/bt_1_frances_hv.png");
+}
+.btn-estilo02:hover {
+  background-image: url("../imgs/bt_2_italiano_hv.png");
+}
+.btn-estilo03:hover {
+  background-image: url("../imgs/bt_3_ingles_hv.png");
+}
+.btn-estilo04:hover {
+  background-image: url("../imgs/bt_4_tropical_hv.png");
+}
+.btn-estilo05:hover {
+  background-image: url("../imgs/bt_5_arido_hv.png");
+}
+.btn-estilo06:hover {
+  background-image: url("../imgs/bt_6_colonial_hv.png");
+}
+.btn-estilo07:hover {
+  background-image: url("../imgs/bt_7_contemporaneo_hv.png");
+}
+.btn-estilo08:hover {
+  background-image: url("../imgs/bt_8_sensorial_hv.png");
+}
 
-.bloco_verde{
+.bloco_verde {
   background-color: #64817e;
   z-index: 4;
   width: 100%;
@@ -209,128 +250,161 @@ width: 100% !important;
   border-radius: 550px 0px 550px 0px;
   margin: 50px 0px;
 }
-.bloco_verde h3{
+.bloco_verde h3 {
   margin-top: 0;
 }
-.bloco_verde h2, .bloco_verde h3, .bloco_verde p{
+.bloco_verde h2,
+.bloco_verde h3,
+.bloco_verde p {
   color: #fff;
 }
-.bloco_verde .caixa-destaque-livre p, .bloco_verde .modal-body p{
+.bloco_verde .caixa-destaque-livre p,
+.bloco_verde .modal-body p {
   color: #333 !important;
 }
 
-.painel-tipos{
+.painel-tipos {
   text-align: center;
 }
-.btn-tipos{
+.btn-tipos {
   border: none;
   margin: 15px;
 }
-.btn-vertical{
-  background: url('../imgs/bt_vertical.png') no-repeat center bottom;
+.btn-vertical {
+  background: url("../imgs/bt_vertical.png") no-repeat center bottom;
   width: 235px;
   height: 535px;
 }
-.btn-vertical:hover{background-image: url('../imgs/bt_vertical_hv.png');}
+.btn-vertical:hover {
+  background-image: url("../imgs/bt_vertical_hv.png");
+}
 
-.btn-inverno{
-  background: url('../imgs/bt_inverno.png') no-repeat center bottom;
+.btn-inverno {
+  background: url("../imgs/bt_inverno.png") no-repeat center bottom;
   width: 200px;
   height: 570px;
 }
-.btn-inverno:hover{background-image: url('../imgs/bt_inverno_hv.png');}
+.btn-inverno:hover {
+  background-image: url("../imgs/bt_inverno_hv.png");
+}
 
-.btn-terraco{
-  background: url('../imgs/bt_terraco.png') no-repeat center bottom;
+.btn-terraco {
+  background: url("../imgs/bt_terraco.png") no-repeat center bottom;
   width: 257px;
   height: 381px;
 }
-.btn-terraco:hover{background-image: url('../imgs/bt_terracos_hv.png');}
-
+.btn-terraco:hover {
+  background-image: url("../imgs/bt_terracos_hv.png");
+}
 
 /*----------- IMAGENS DECORATIVAS -----------*/
 
-.img-planta{
+.img-planta {
   position: absolute;
   left: 0;
   z-index: 0;
   width: 200px;
   margin-top: 80px;
 }
-.img-janela{
+.img-janela {
   position: absolute;
   right: 0;
   z-index: 0;
   width: 200px;
   margin-top: -397px;
 }
-.img-folhagem_dir{
+.img-folhagem_dir {
   position: absolute;
   right: 0;
   z-index: 0;
   width: 250px;
 }
-.img-folhagem_esq{
+.img-folhagem_esq {
   position: absolute;
   left: 0;
   z-index: 0;
   width: 230px;
 }
 
+.video-youtube {
+  width: 640px;
+  height: 360px;
+  margin: 40px auto;
+  display: block;
+}
+
 /*----------- /IMAGENS DECORATIVAS -----------*/
 
-
-@media screen and (max-width: 1281px){
-  .img-planta{
+@media screen and (max-width: 1281px) {
+  .img-planta {
     left: -2%;
     width: 160px;
   }
-  .img-janela{
+  .img-janela {
     width: 160px;
     margin-top: -308px;
   }
-  .img-folhagem_dir{
+  .img-folhagem_dir {
     width: 200px;
   }
-  .img-folhagem_esq{
+  .img-folhagem_esq {
     width: 170px;
     left: -4%;
   }
 
-  .bloco_verde{
+  .bloco_verde {
     padding: 80px 40px;
     border-radius: 350px 0px 350px 0px;
     margin: 50px 0px;
   }
 }
 
-@media screen and (max-width: 1000px){
-  .parallax {display: none;}
-  .parallax-mirror {display: none;}
-  .imgdireita{display: none;}
+@media screen and (max-width: 1000px) {
+  .parallax {
+    display: none;
+  }
+  .parallax-mirror {
+    display: none;
+  }
+  .imgdireita {
+    display: none;
+  }
 }
 
-@media screen and (max-width: 820px){
-  .btn-estilo04, .btn-estilo05{
+@media screen and (max-width: 820px) {
+  .btn-estilo04,
+  .btn-estilo05 {
     margin-left: 30px;
     margin-right: -10px;
   }
 
-  .bloco_verde{
+  .bloco_verde {
     padding: 80px 40px;
     border-radius: 200px 0px 200px 0px;
     margin: 50px 0px;
   }
-  .btn-tipos{
+  .btn-tipos {
     border: none;
     margin: 10px;
   }
 }
 
-@media screen and (max-width: 480px){
-  .espera_video{
+@media screen and (max-width: 700px) {
+  .video-youtube {
     width: 320px;
     height: 180px;
     border-radius: 10px;
   }
+
+
+@media screen and (max-width: 480px) {
+  .video-youtube {
+    width: 320px;
+    height: 180px;
+    border-radius: 10px;
+  }
+
+  
 }
+
+
