--- a/03_industria/css/custom.css
+++ b/03_industria/css/custom.css
@@ -5,7 +5,12 @@ body{
   background-attachment: auto, auto, fixed;
   background-size: 12%, 8%, cover;
 }
-
+iframe {
+  width: 580px;
+  height: 360px;
+  margin: 10px auto;
+  display: block;
+}
 @media screen and (max-width: 1050px) {
   body{
     background: url('../imgs/background_branco.png');
@@ -14,4 +19,11 @@ body{
     background-attachment: fixed;
     background-size: cover;
   }
+}
+
+@media only screen and (max-width: 480px){
+  iframe {
+    width: 100%;
+    height: 320px;
+}
 }
