--- a/06_meio_ambiente/css/custom.css
+++ b/06_meio_ambiente/css/custom.css
@@ -16,6 +16,12 @@ body{background: #fff;}
   height: 1217px;
   width: 800px;
 }
+iframe {
+  width: 580px;
+  height: 360px;
+  margin: 10px auto;
+  display: block;
+}
 
 @media (max-width: 1080px) {
   .imagem {
@@ -24,4 +30,10 @@ body{background: #fff;}
     height: unset;
     width: unset;
   }
+}
+@media only screen and (max-width: 480px){
+  iframe {
+    width: 100%;
+    height: 320px;
+}
 }
