--- a/template/css/leitor.css
+++ b/template/css/leitor.css
@@ -19,7 +19,7 @@ li:first-line {
 body {
   background-color: #f2f2f2
 }
-
+.pull-right{max-width: 13%;}
 div#booklet {
 margin-top: 80px;
 max-width: 900px;
