--- a/template/css/leitor.css
+++ b/template/css/leitor.css
@@ -20,6 +20,7 @@ body {
   background-color: #f2f2f2
 }
 .pull-right{max-width: 13%;}
+.jardim-vertical{max-width: 50%;}
 div#booklet {
 margin-top: 80px;
 max-width: 900px;
