--- a/11_projeto_jardinismo/css/custom.css
+++ b/11_projeto_jardinismo/css/custom.css
@@ -386,6 +386,7 @@ ul.marcador-verde p{
 
 
 @media screen and (max-width: 820px){
+  .div-fig09 img{height: auto;}
   .topo img{
     max-width: 100%;
     margin: unset;
