--- a/01_design_passivo/css/custom.css
+++ b/01_design_passivo/css/custom.css
@@ -19,6 +19,14 @@
   margin-bottom: -50px;
 }
 
+.video-youtube {
+  width: 640px;
+  height: 360px;
+  margin: 40px auto;
+  display: block;
+  margin-bottom: 50px;
+}
+
 .destaque h3 {
   color: #fff;
   margin: 0;
@@ -52,4 +60,20 @@ h3::before {
 
 .encerramento {
   color: black;
+}
+
+@media screen and (max-width: 700px) {
+  .video-youtube {
+    width: 320px;
+    height: 180px;
+    border-radius: 10px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .video-youtube {
+    width: 320px;
+    height: 180px;
+    border-radius: 10px;
+  }
 }
