--- a/02_sustentabilidade_nos_ambientes/css/custom.css
+++ b/02_sustentabilidade_nos_ambientes/css/custom.css
@@ -253,6 +253,14 @@ button {
   background-size: 15%;
 }
 
+.video-youtube {
+  width: 640px;
+  height: 360px;
+  margin: 40px auto;
+  display: block;
+  margin-bottom: 50px;
+}
+
 @media (max-width: 1500px) {
   body {
     background: url("../imgs/background_branco.png") repeat;
@@ -368,5 +376,21 @@ button {
   }
   .bt-acessibilidade:hover {
     background: url("../imgs/pc_btn_7_mobile.png");
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .video-youtube {
+    width: 320px;
+    height: 180px;
+    border-radius: 10px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .video-youtube {
+    width: 320px;
+    height: 180px;
+    border-radius: 10px;
   }
 }
